fix h3 spacing

--- a/test/dummy/app/assets/stylesheets/modules/mailer/_type.sass
+++ b/test/dummy/app/assets/stylesheets/modules/mailer/_type.sass
@@ -27,10 +27,10 @@ $dummy-mailer-styles: false !default
   h3, .h3
     +mailer-font-h3
     display: block
-    margin: 12px 0 12px 0
+    margin: 32px 0 8px 0
 
     +mailer-media-breakpoint-down($mailer-breakpoint-mobile)
-      margin: 8px 0 8px 0
+      margin: 32px 0 8px 0
 
   h4, .h4
     +mailer-font-h4
